| Summary: | ASTERISK-25318: tests/rest_api/applications/subscribe-endpoint/nominal/resource: Sporadically failing | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2015-08-12 05:33:01 | Date Closed: | 2015-08-28 12:31:46 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Tests/testsuite |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ( 0) er-ast1-full.txt ( 1) er-ast2-full.txt ( 2) er-full.txt | |
| Description: | The tests/rest_api/applications/subscribe-endpoint/nominal/resource test seems to be sporadically failing. It's expecting a ChannelDestroyed event but is not getting it. The log shows the last channel being hung up but a destroyed event is never created. There may be a race condition with the shutdown process. | ||
| Comments: | |||